--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -9,6 +9,7 @@
 <div class="col-sm-2 hidden-xs">
     <div class="docs-menu affix">
         <ul class="nav nav-pills nav-stacked">
+            {% if user.is_authenticated %}
             <li><a href="/">Home</a></li>
             <li><a href="/startupshot/">Startup Shot</a></li>
             <li><a href="/startupshot/view">Startup Shot Report</a></li>
@@ -17,6 +18,8 @@
             <li><a href="/inspection/jobReport/">Job Report</a></li>
             <li><a href="/production_and_mold_history/">PHL</a></li>
             <li><a href="/equipment/">Equipment</a></li>
+                <li><a href="/logout">Log out</a></li>
+            {% endif %}
         </ul>
     </div>
 </div>
